# nmaxe-firmware

./: CMakeLists.txt
main/: main.c
main/hal/: hal_i2c.h  hal_uart.h
main/mining/: sha256d.c  sha256d.h
main/network/: wifi.c
main/system/: config.c  thermal.c
nmaxe-firmware/: sdkconfig.defaults
nmaxe-firmware/main/: CMakeLists.txt
nmaxe-firmware/main/asic/: bm1366.c  bm1366.h
nmaxe-firmware/main/hal/: hal.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_uart.c
nmaxe-firmware/main/mining/: work_manager.c  work_manager.h
nmaxe-firmware/main/network/: stratum.c  stratum.h  wifi.h
nmaxe-firmware/main/system/: config.h  display.c  display.h  thermal.h
